@@ -50,12 +50,14 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomTypeConverters\EnumTypeConverter.cs" />
     <Compile Include="Infrastructure\Mocks\DummyFixedWidthFileParser.cs" />
     <Compile Include="Models\DateTimeModel.cs" />
     <Compile Include="Models\PrimitiveTypesModel.cs" />
     <Compile Include="Models\DummyStringModel.cs" />
     <Compile Include="Tests\FixedWidthParser\StringTest.cs" />
     <Compile Include="Tests\LayoutDescriptor\ParserTestBase.cs" />
+    <Compile Include="Tests\TypeConverter\CustomTypeConvertTests.cs" />
     <Compile Include="Tests\TypeConverter\DateTimeConverterTests.cs" />
     <Compile Include="Tests\LayoutDescriptor\PrimitiveTypesTest.cs" />
     <Compile Include="Tests\LayoutDescriptor\LayoutDescriptorExpressionTests.cs" />
